@@ -840,6 +840,7 @@ define,	   0x4A4436,	0x4AB104,	0x4A44C6,	"DESPAWN_TO_DO_BOMBARD_TILE_RETURN",		"
 define,	   0x4A31C6,	0x4A9E19,	0x4A3256,	"DESPAWN_TO_CRUISE_MISSILE_DEFENDER_RETURN",	"int"
 define,	   0x5659E2,	0x571D83,	0x565992,	"DESPAWN_TO_BOUNCE_TRESPASSING_UNITS_RETURN",	"int"
 define,	   0x5B4844,	0x5C319E,	0x5B4554,	"DESPAWN_TO_NUKE_DAMAGE_RETURN",		"int"
+define,	   0x5BC0A2,	0x5CABF1,	0x5BBDB2,	"DESPAWN_RECURSIVE_RETURN",			"int"
 repl call, 0x5B8D95,	0x5C7801,	0x5B8AA5,	"count_units_at_in_try_capturing",		""
 repl call, 0x5B845D,	0x5C6E73,	0x5B816D,	"Unit_despawn_after_capture",			""
 define,	   0x5F35C2,	0x603442,	0x5F34F2,	"ADDR_RES_CHECK_JUMP_TILE_INDEX_AT_LEAST_9",	"byte *"
